syntax = "proto3";

package crm.contact.v1;

option csharp_namespace = "CRM.Protobuf.Contacts.V1";

import "contact.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service ContactApi {
  rpc Ping (google.protobuf.Empty) returns (PongReply);
}

message GetContactRequest {
  string contactId = 1;
}

message GetContactResponse {
  ContactDto contact = 1;
}

message ListContactsResponse {
  repeated ContactDto contacts = 1;
}

message CreateContactResponse {
  ContactDto contact = 1;
}

message CreateContactRequest {
  google.protobuf.StringValue firstName = 1;
  string lastName = 2;
  google.protobuf.StringValue company = 3;
  google.protobuf.StringValue title = 4;
  google.protobuf.StringValue description = 5;
}

message UploadPhotoRequest {
  string id =1;
  string photo = 2;
}
